MFC r349912: Restore ability to pass NULL name argument to pthread_set_name_np(3) to clear the thread name.

PR:	239142